tests/negative/test_macro_macro_conflict.orb
mac calc(a b) (+ a b);

mac calc(c d) (- c d);

fnc main() () {};